--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -2149,7 +2149,12 @@ config ELF_POLICY
 	bool "ELF policy support" 
 	depends on X86_64
 	default y
+config MM_PCID	
+	bool "Use tagged TLB(PCID) if available"
+	depends on X86_64
+	default	y
 endmenu
+
 
 
 config HAVE_ATOMIC_IOMAP
